--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "iconv": "^2.2.0",
+    "then-redis": "^2.0.1",
     "sails-hook-babel": "^6.0.1",
     "swig": "^1.4.2"
   }
