--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   "license": "",
   "devDependencies": {
     "babel-core": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
+    "browserify-css": "^0.9.2",
+    "gulp": "^3.9.1",
+    "gulpman": "^1.9.1",
     "iconv": "^2.2.0",
-    "then-redis": "^2.0.1",
     "sails-hook-babel": "^6.0.1",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "then-redis": "^2.0.1"
   }
 }
